# mysteries

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  mysteries.example.toml
.ai_history/logs/: 2026-06-27-01-ui-design-contract-d1d2.md  2026-06-27-02-archive-bootstrap-provider-core.md  2026-06-27-03-archive-add-agent-loop-core.md  2026-06-27-04-archive-add-builtin-tools.md  2026-06-27-05-archive-add-credential-chain.md  2026-06-27-06-archive-add-openai-live-transport.md  2026-06-27-07-archive-add-config-layering.md  2026-06-27-08-archive-add-cli-assembly.md  2026-06-27-09-archive-add-tui-shell.md  2026-06-27-10-archive-add-tui-events.md  2026-06-27-11-archive-add-tui-theme.md  2026-06-27-12-archive-add-tui-polish.md  2026-06-27-13-archive-add-anthropic-provider.md  2026-06-27-14-archive-finish-1-0.md  2026-06-28-15-archive-claude-code-style-loop.md  2026-06-28-16-archive-improve-tui-interaction.md  2026-06-28-17-archive-fix-transcript-viewport-clipping.md  2026-06-28-18-archive-token-usage-context-strategy.md  2026-06-28-19-archive-refine-tool-card-folding.md  2026-06-28-20-archive-add-token-compaction.md  2026-06-28-21-archive-tui-ux-and-cli-auth.md  2026-06-28-22-archive-tui-activity-status.md  2026-06-28-23-archive-refine-auth-providers.md  2026-06-28-24-archive-trim-tui-builtin-commands.md  2026-06-29-25-archive-add-first-run-onboarding.md  2026-06-29-26-archive-add-wps-ai-provider.md  2026-06-29-27-archive-add-multi-provider-config.md  2026-06-29-28-archive-simplify-wps-auth-default-model.md  2026-06-29-29-archive-add-provider-registry-hotswap.md  2026-06-29-30-archive-add-models-picker.md  2026-06-29-31-archive-classify-forbidden-403.md  2026-06-29-32-archive-add-input-history-and-permission-modes.md  2026-06-29-33-archive-add-jump-to-bottom-indicator.md  2026-06-29-34-archive-enable-mouse-wheel-scroll.md  2026-07-01-35-archive-fullscreen-mouse-select-copy.md  2026-07-01-36-archive-add-multiline-input.md  2026-07-01-37-archive-guard-paste-burst-submit.md  2026-07-02-38-archive-guard-paste-cross-batch.md  2026-07-03-39-archive-add-message-queue.md  2026-07-03-40-archive-add-paste-fold.md  (+26 more)
.github/workflows/: ci.yml  release.yml  security-audit.yml
UI设计/: Mysteries Agent - Daylight (standalone).html  Mysteries Agent - Midnight (standalone).html
deliverables/: README.md
deliverables/Snake-Game/: README.md  index.html
openspec/: config.yaml
src/: app.rs  cli.rs  error.rs  lib.rs  main.rs
src/agent/: compacting.rs  context.rs  delegate_concurrency_tests.rs  message.rs  mod.rs  publication_tests.rs  runtime.rs  scope.rs  scope_tests.rs
src/config/: mod.rs
src/credential/: mod.rs
src/permission/: mod.rs  preview.rs
src/provider/: anthropic.rs  anthropic_stream.rs  mock.rs  mod.rs  (+7 more)
tests/: e2e.rs  release_workflow.rs
技术方案/: mysteries-agent技术方案.md
设计规范/: 01-设计令牌.md  02-布局与交互.md  03-组件清单.md  README.md
需求文档/: mysteries-agent开发需求文档-初版.md
(+512 files in other folders)
