[package]
name = "mysteries"
version = "1.1.0"
edition = "2021"

[dependencies]
arboard = "3"
async-trait = "0.1"
crossterm = { version = "0.28", features = ["event-stream"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
globset = "0.4"
ignore = "0.4"
pulldown-cmark = "0.13"
ratatui = "0.29"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "socks"] }
secrecy = "0.10.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
thiserror = "1"
toml = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time", "test-util", "sync"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
insta = "1"
tempfile = "3"
