[package]
name = "mysteries"
version = "1.1.0"
edition = "2021"
description = "自研 terminal Agent CLI:对话驱动、可调用本地工具的编码 agent(Claude Code 风格);核心 Agent Loop / 工具 / 权限自实现,不依赖第三方 Agent SDK"
license = "MIT"
repository = "https://github.com/tajiaoyezi/mysteries"
readme = "README.md"
keywords = ["agent", "cli", "tui", "llm", "coding-assistant"]
categories = ["command-line-utilities"]

[dependencies]
arboard = "3"
async-trait = "0.1"
crossterm = { version = "0.29", features = ["event-stream"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
globset = "0.4"
ignore = "0.4"
pulldown-cmark = "0.13"
ratatui = { version = "0.30", default-features = false, features = ["crossterm_0_29", "layout-cache"] }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "socks"] }
secrecy = "0.10.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-fancy"] }
thiserror = "1"
toml = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time", "test-util", "sync"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
insta = "1"
tempfile = "3"
